--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Platformer</string>
+    <string name="levelOne">
+        0 0 0 0 0 0 0 0 2 2 2 0 0 0 0 0 \n
+        0 0 0 2 2 0 0 2 0 1 0 2 0 0 0 0 \n
+        0 0 0 0 0 0 0 2 0 0 0 2 0 0 0 0 \n
+        0 0 0 0 0 0 2 2 2 2 2 2 2 0 0 0 \n
+    </string>
 </resources>
